--- a/EX-1/index.html
+++ b/EX-1/index.html
@@ -13,7 +13,7 @@
         <div class="item c">c</div>  
         <div class="item d">d</div>
         <div class="item e">e</div>
-        <div class="item f">f</div>  
+        <div class="item f">g</div>  
       </div>
 </body>
 </html>
